--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-scripts": "^5.0.0",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
